# jp-prime-minister-llm-sorting

./: .env.example  .gitignore  README.md  pyproject.toml
article/: 1-introduction.md  2-BLUF.md  3-setup.md  4-pointwise.md  5-listwise.md  6-pairwise.md  7-closing.md  8-appendix.md
data/: prime_ministers.csv
data/results/gpt-5-mini/listwise/: carnivore_herbivore.json  dog_cat.json  inkya_youkya.json  left_right.json  right_left.json  romanticist_realist.json  topdown_bottomup.json
data/results/gpt-5-mini/pairwise/: left_right_inconsistent.json  left_right_violations.json  right_left_inconsistent.json  right_left_violations.json
data/results/gpt-5-mini/pairwise/kwiksort/carnivore_herbivore/: seed_0.json
data/results/gpt-5-mini/pairwise/kwiksort/dog_cat/: seed_0.json
data/results/gpt-5-mini/pairwise/kwiksort/inkya_youkya/: seed_0.json
data/results/gpt-5-mini/pairwise/kwiksort/left_right/: seed_0.json  seed_1.json  seed_10.json  (+97 more)
data/results/gpt-5-mini/pointwise/: carnivore_herbivore.json  dog_cat.json  inkya_youkya.json  left_right.json  right_left.json  romanticist_realist.json  topdown_bottomup.json
notebooks/: 01_pointwise.py  02_listwise.py  03a_pairwise_comparison.py  03b_pairwise_sorting.py  04_other_criteria.py
src/pm_sort/: __init__.py  api.py  config.py
src/pm_sort/compare/: __init__.py  _openai.py  listwise.py  pointwise.py
src/pm_sort/core/: __init__.py  cache.py  config.py  criteria.py  data.py
src/pm_sort/methods/: __init__.py  listwise.py  pointwise.py
src/pm_sort/methods/pairwise/: __init__.py  analyze.py  compare.py  sort.py
(+102 files in other folders)
