[project]
name = "pm-sort"
version = "0.1.0"
description = "LLMで歴代首相をソート"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "marimo>=0.19.11",
    "openai>=2.21.0",
    "polars>=1.38.1",
    "python-dotenv>=1.2.1",
    "scipy>=1.17.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
